# alpine-rust

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh
sample/: Cargo.toml  Taskfile.yaml  build.rs
sample/migrations/: 20220727210529_migrations.sql
sample/src/: main.rs
