[package]
name = "sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.17"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.20.1", features = ["full"] }
zmq = "0.9.2"
